--- a/css/base.css
+++ b/css/base.css
@@ -1,36 +1,3 @@
-<<<<<<< HEAD
-=======
-blockquote,body,button,dd,dl,dt,fieldset,form,h1,h2,h3,h4,h5,h6,hr,input,legend,li,ol,p,pre,td,textarea,th,ul {
-    margin: 0;
-    padding: 0;
-}
-li {
-    list-style: none;
-}
-a {
-    text-decoration: none;
-    font-size: 12px;
-    color: #999;
-}
-a:hover {
-    color: #c81623
-}
-i {
-    font-style: normal;
-}
-input,button {
-    border: 0;
-    outline: none;
-    float: left;
-}
-ul {
-    list-style: none;
-}
-body {
-    background-color: #f6f6f6;
-    font: 12px/1.5 Microsoft YaHei,tahoma,arial,Hiragino Sans GB,\\5b8b\4f53,sans-serif;
-}
->>>>>>> 3ec6b5da877fdbecb59990b19cfa8a4893c64327
 @font-face {
     font-family: 'iconfont';
     src: url('../fonts/iconfont.eot');
@@ -51,25 +18,6 @@ body {
     width: 1190px;
     margin: 0 auto;
 }
-<<<<<<< HEAD
-=======
-.fl {
-    /* 浮动的公共类 */
-    float: left;
-}
-.fr {
-    float: right;
-}
-.f10 {
-    color: #f10215!important;
-}
-.iconfont {
-    font-family: iconfont;
-    font-style: normal;
-    -webkit-text-stroke-width: .2px;
-    /* -moz-osx-font-smoothing: grayscale; */
-}
->>>>>>> 3ec6b5da877fdbecb59990b19cfa8a4893c64327
 /* header */
 header {
     height: 80px;
@@ -149,6 +97,7 @@ header i {
     left: 0;
     box-shadow: 0px -12px 10px rgba(0,0,0,.2);
     border-bottom: 1px solid #ededed;
+    z-index: 999;
 }
 .logo a {
     display: block;
@@ -247,7 +196,6 @@ header i {
 
 /* 页面底部start */
 footer {
-    margin-top: 35px;
     height: 500px;
     background-color: #eaeaea;
 }
