--- a/css/base.css
+++ b/css/base.css
@@ -22,6 +22,15 @@
     width: 1190px;
     margin: 0 auto;
 }
+.drop-layer {
+    display: none;
+    position: absolute;
+    border: 1px solid #ccc;
+    border-top: none;
+    background-color: #fff;
+    box-shadow: 1px 2px 1px rgba(0,0,0,.1);
+    z-index: 99;
+}
 /* header */
 header {
     height: 80px;
@@ -58,22 +67,34 @@ header i {
     border-bottom: 1px solid #ddd;
     line-height: 30px;
 }
+.shortcut .drop-layer {
+    line-height: 24px;
+    top: 29px;
+}
+.shortcut .active {
+    display: block;
+}
 .city {
     margin-left: 200px;
 }
 .shortcut li {
     float: left;
+    position: relative;
+}
+.shortcut li a {
+    padding: 0 6px;
 }
 .fr .iconfont {
     font-size: 12px;
-    color: #999
+    color: #999;
+    margin-left: -6px;
 }
 .space {
     /* 小竖线 */
     width: 1px;
     height: 10px;
     background-color: #ccc;
-    margin: 10px 12px 0;
+    margin: 10px 6px 0;
 }
 .mobile {
     position: relative;
@@ -88,6 +109,131 @@ header i {
 .middle .form i {
     color: #fff;
     font-size: 16px;
+}
+.myjdli:hover{
+    background-color: #fff;
+}
+.myjdli .drop-layer {
+    left: 0;
+    width: 280px;
+}
+
+.myjdlist li {
+    clear: both;
+}
+.myjdlist .fore1{
+    float: left;
+    width: 126px;
+}
+.myjdlist {
+    padding: 10px 0 10px 15px;
+    overflow: hidden;
+}
+.myjdlist2 {
+    border-top: 1px solid #f1f1f1;
+}
+.qiyegou .drop-layer{
+    left: 0;
+    width: 140px;
+    padding: 10px 0 10px 15px;
+    overflow: hidden;
+}
+.qiyegou li{
+    width: 56px;
+    white-space: nowrap;
+}
+.qiyegou:hover{
+    background-color: #fff;
+}
+.kehuserve .drop-layer {
+    right: 0;
+    width: 170px;
+    padding: 10px 0;
+    overflow: hidden;
+}
+.kehuserve:hover{
+    background-color: #fff;
+}
+.kehuserve .item-kehu,.kehuserve .item-shanghu{
+    padding-left: 15px;
+    font-weight: 700;
+    color: #666;
+}
+.kehuserve .item-shanghu {
+    margin-top: 5px;
+    padding-top: 5px;
+    border-top: 1px dotted #eee;
+}
+.kehuserve li{
+    width: 72px;
+    padding-left: 10px;
+    text-align: left;
+}
+.mobilejd .drop-layer{
+    right: 0;
+    width: 190px;
+}
+.mobilejd:hover{
+    background-color: #fff;
+}
+.mobilejd .mobile-item {
+    position: relative;
+    z-index: 5;
+    padding: 15px 0;
+    border-bottom: 1px solid #E7E7E7;
+}
+.mobile-item-hd {
+    position: absolute;
+    left: 5px;
+    top: 14px;
+    width: 74px;
+    height: 74px;
+    border: 1px solid #CCC;
+    background-color: #F7F7F7;
+}
+.mobile-item-hd img{
+    width: 70px;
+    height: 70px;
+    margin: 2px 0 0 2px;
+}
+.mobile-item-bd {
+    margin: 0 10px 0 86px;
+    min-height: 70px;
+}
+.mobile-pop-tit {
+    font-size: 12px;
+    line-height: 17px;
+    color: #666 !important;
+}
+.mobile-pop-tit a {
+    color: #666 !important;
+}
+.mobile-pop-value {
+    margin: 3px 0;
+    line-height: 14px;
+    color: #F10214;
+}
+.mobile-pop-device {
+    overflow: hidden;
+    height: 25px;
+}
+.mobile-pop-device-lk {
+    overflow: hidden;
+    float: left;
+    margin-right: 2px;
+    width: 25px;
+    height: 25px;
+    text-indent: -999px;
+    background: url(../images/sprite_mobile@1x.png) no-repeat
+}
+.mobile-pop-device-ios{
+    background-position: 0 0;
+}
+.mobile-pop-device-and{
+    background-position: 0 -26px;
+}
+.mobile-pop-device-pad{
+    background-position: 0 -52px;
 }
 /* 快速导航栏end */
 /* 中间头部分begin*/
