--- a/css/header2.css
+++ b/css/header2.css
@@ -17,7 +17,15 @@
     width: 1190px;
     margin: 0 auto;
 }
-
+.drop-layer {
+    display: none;
+    position: absolute;
+    border: 1px solid #ccc;
+    border-top: none;
+    background-color: #fff;
+    box-shadow: 1px 2px 1px rgba(0,0,0,.1);
+    z-index: 99;
+}
 /* 快速导航栏begin */
 .shortcut {
     height: 30px;
@@ -25,22 +33,107 @@
     border-bottom: 1px solid #ddd;
     line-height: 30px;
 }
-.city i {
-    color: #5c5452
+.shortcut .drop-layer {
+    line-height: 24px;
+    top: 29px;
+}
+.shortcut .active {
+    display: block;
+}
+.city {
+    margin-left: 200px;
 }
 .shortcut li {
     float: left;
+    position: relative;
+}
+.shortcut li a {
+    padding: 0 6px;
 }
 .fr .iconfont {
     font-size: 12px;
-    color: #999
+    color: #999;
+    margin-left: -6px;
 }
 .space {
     /* 小竖线 */
     width: 1px;
     height: 10px;
     background-color: #ccc;
-    margin: 10px 12px 0;
+    margin: 10px 6px 0;
+}
+.mobile {
+    position: relative;
+}
+.mobile img {
+    position: absolute;
+    left: -3px;
+    top: 24px;
+    border: 1px solid rgb(199, 102, 102);
+    padding: 3px;
+}
+.middle .form i {
+    color: #fff;
+    font-size: 16px;
+}
+.myjdli:hover{
+    background-color: #fff;
+}
+.myjdli .drop-layer {
+    left: 0;
+    width: 280px;
+}
+
+.myjdlist li {
+    clear: both;
+}
+.myjdlist .fore1{
+    float: left;
+    width: 126px;
+}
+.myjdlist {
+    padding: 10px 0 10px 15px;
+    overflow: hidden;
+}
+.myjdlist2 {
+    border-top: 1px solid #f1f1f1;
+}
+.qiyegou .drop-layer{
+    left: 0;
+    width: 140px;
+    padding: 10px 0 10px 15px;
+    overflow: hidden;
+}
+.qiyegou li{
+    width: 56px;
+    white-space: nowrap;
+}
+.qiyegou:hover{
+    background-color: #fff;
+}
+.kehuserve .drop-layer {
+    right: 0;
+    width: 170px;
+    padding: 10px 0;
+    overflow: hidden;
+}
+.kehuserve:hover{
+    background-color: #fff;
+}
+.kehuserve .item-kehu,.kehuserve .item-shanghu{
+    padding-left: 15px;
+    font-weight: 700;
+    color: #666;
+}
+.kehuserve .item-shanghu {
+    margin-top: 5px;
+    padding-top: 5px;
+    border-top: 1px dotted #eee;
+}
+.kehuserve li{
+    width: 72px;
+    padding-left: 10px;
+    text-align: left;
 }
 .mobile {
     position: relative;
