--- a/css/index.css
+++ b/css/index.css
@@ -86,6 +86,22 @@ a:hover {
 .grid-col1 ul li:hover {
     background-color: #ccc;
 }
+.cate_pop {
+    top: 0px;
+    display: none;
+    left: 191px;
+    background-color: #fff;
+    position: absolute;
+    width: 998px;
+    min-height: 478px;
+    border: 1px solid #f7f7f7;
+    box-shadow: 2px 0 5px rgba(0,0,0,.3);
+    transition: top .25s ease;
+    z-index: 100;
+}
+.cate_pop>div h1{
+    font-size: 100px
+}
 /* =========================================第二列 ===============================*/
 .grid-col2 {
     width: 590px;
@@ -709,6 +725,62 @@ a:hover {
     line-height: 20px;
     margin: 12px 0 0 10px;
     vertical-align: top;
+}
+/* ==================top================ */
+.tab-head {
+    height: 34px;
+    line-height: 34px;
+    text-align: center;
+    background: #f7f7f7;
+}
+.tab-head-item {
+    float: left;
+    width: 78px;
+    cursor: pointer;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.top-container{
+    width: 390px;
+    height: 321px;
+    background-color: #fff;
+}
+.top-item-lk {
+    position: relative;
+    display: block;
+    height: 107px;
+}
+.top-item-img {
+    float: left;
+    width: 80px;
+    height: 80px;
+    margin-top: 15px;
+}
+.top-item-img img{
+    width: 100%;
+    height: 100%;
+}
+.top-item-rank {
+    float: left;
+    width: 30px;
+    height: 40px;
+    margin: 36px 0 0 10px;
+    line-height: 40px;
+    font-size: 32px;
+    text-align: center;
+    font-family: 'impact', sans-serif;
+    color: #e74240;
+}
+.top-item-name {
+    display: block;
+    margin-left: 125px;
+    padding-top: 40px;
+    height: 32px;
+    line-height: 16px;
+    font-size: 12px;
+    overflow: hidden;
+    color: #333;
 }
 /* ==================daily================ */
 .daily-container {
