--- a/css/shopcar.css
+++ b/css/shopcar.css
@@ -88,7 +88,7 @@ body {
     overflow: hidden;
     background: #fff4e8;
     border-bottom: 1px solid #c5c5c5;
-    margin-bottom: 20px;
+    margin-top: 20px;
 }
 .car-tbody .cell {
     float: left;
@@ -241,4 +241,105 @@ body {
 .p-ops a {
     color: #666;
     display: block;
+}
+/* car-foot */
+.car-foot {
+    position: relative;
+    margin-top: 40px;
+}
+.car-toolbar {
+    width: 1188px;
+    height: 50px;
+    border: 1px solid #f0f0f0;
+    background: #fff;
+    position: relative;
+    margin: 0 auto
+}
+.car-toolbar .select-all {
+    float: left;
+    height: 18px;
+    line-height: 18px;
+    padding: 16px 0 16px 9px;
+    white-space: nowrap;
+}
+.car-toolbar .operation {
+    float: left;
+    height: 50px;
+    width: 310px;
+    line-height: 50px;
+}
+.car-toolbar .operation a{
+    float: left;
+    margin-left: 10px;
+    color: #666;
+}
+.car-toolbar .operation .car-clear{
+    font-weight: 700;
+    position: relative;
+}
+.car-toolbar .toolbar-right {
+    position: absolute;
+    height: 52px;
+    right: 0;
+    top: -1px;
+    width: 610px;
+}
+.toolbar-right .btn-area{
+    float: right;
+}
+.toolbar-right .btn-area a{
+    display: block;
+    position: relative;
+    width: 96px;
+    height: 52px;
+    line-height: 52px;
+    color: #fff;
+    text-align: center;
+    font-size: 18px;
+    font-family: "Microsoft YaHei";
+    background: #e54346;
+    overflow: hidden;
+}
+.toolbar-right .price-sum {
+    float: right;
+    height: 43px;
+    line-height: 43px;
+    margin: 7px 20px 0 10px;
+    color: #666;
+    width: auto;
+    position: relative;
+    white-space: nowrap;
+}
+.toolbar-right .txt-new {
+    float: left;
+    width: 50px;
+    text-align: right;
+    color: #999;
+    margin-right: 5px;
+}
+.toolbar-right .sum-price {
+    display: inline-block;
+    text-align: right;
+    font-family: verdana;
+}
+.toolbar-right .sum-price em{
+    font-size: 16px;
+    color: #e4393c;
+    font-weight: 700;
+    font-style: normal;
+}
+.toolbar-right .amount-sum{
+    float: right;
+    color: #999;
+    height: 44px;
+    line-height: 44px;
+    margin: 7px 0 0;
+    cursor: pointer;
+}
+.toolbar-right .amount-sum em {
+    color: #e4393c;
+    font-family: verdana;
+    font-weight: 700;
+    margin: 0 3px;
+    font-style: normal;
 }
